--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.19.0",
+    "csv-parse": "^4.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.4",
